--- a/main.html
+++ b/main.html
@@ -1,16 +1,25 @@
 <!DOCTYPE html>
-
-<html>
-
+<html lang="en">
 <head>
-	<link rel="stylesheet" href="styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Money Use and Holiday Destinations</title>
 </head>
-
 <body>
-	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
-</script>
+
+<h2>Money Use</h2>
+<ol>
+  <li data-ns-test="shoppingList">Buy a new laptop</li>
+  <li data-ns-test="shoppingList">Upgrade my gaming setup</li>
+  <li data-ns-test="shoppingList">Invest in stocks</li>
+</ol>
+
+<h2>Holiday Destinations</h2>
+<ul>
+  <li data-ns-test="holidayList">Japan</li>
+  <li data-ns-test="holidayList">Italy</li>
+  <li data-ns-test="holidayList">New Zealand</li>
+</ul>
 
 </body>
-
 </html>
